include/dss_capi.h

    /*
    Percent default  annual load growth rate
    */
    DSS_CAPI_DLL double Solution_Get_pctGrowth(void);
    /*
    Percent default  annual load growth rate
    */
    DSS_CAPI_DLL void Solution_Set_pctGrowth(double Value);
    /*
    Type of device to add in AutoAdd Mode: {AddGen (Default) | AddCap}
    */
    DSS_CAPI_DLL int32_t Solution_Get_AddType(void);
    DSS_CAPI_DLL void Solution_Set_AddType(int32_t Value);
    /*
    Generator kW for AutoAdd mode
    */
    DSS_CAPI_DLL double Solution_Get_GenkW(void);
    DSS_CAPI_DLL void Solution_Set_GenkW(double Value);
    /*
    PF for generators in AutoAdd mode
    */
    DSS_CAPI_DLL double Solution_Get_GenPF(void);
    /*
    PF for generators in AutoAdd mode
    */
    DSS_CAPI_DLL void Solution_Set_GenPF(double Value);
    /*
    Capacitor kvar for adding capacitors in AutoAdd mode
    */
    DSS_CAPI_DLL double Solution_Get_Capkvar(void);
    /*
    Capacitor kvar for adding capacitors in AutoAdd mode
    */
    DSS_CAPI_DLL void Solution_Set_Capkvar(double Value);
    /*
    Base Solution algorithm: {NormalSolve | NewtonSolve}
    */
    DSS_CAPI_DLL int32_t Solution_Get_Algorithm(void);
    /*
    Base Solution algorithm: {NormalSolve | NewtonSolve}
    */
    DSS_CAPI_DLL void Solution_Set_Algorithm(int32_t Value);
    /*
    {Static* | Event | Time | Off} Modes for control devices (see ControlModes)
    */
    DSS_CAPI_DLL int32_t Solution_Get_ControlMode(void);
    DSS_CAPI_DLL void Solution_Set_ControlMode(int32_t Value);
    /*
    Default Multiplier applied to generators (like LoadMult)
    */
    DSS_CAPI_DLL double Solution_Get_GenMult(void);
    /*
    Default Multiplier applied to generators (like LoadMult)
    */
    DSS_CAPI_DLL void Solution_Set_GenMult(double Value);
    /*
    Default daily load shape (defaults to "Default")
    */
    DSS_CAPI_DLL char* Solution_Get_DefaultDaily(void);
    /*
    Default Yearly load shape (defaults to "Default")
    */
    DSS_CAPI_DLL char* Solution_Get_DefaultYearly(void);
    /*
    Default daily load shape (defaults to "Default")
    */
    DSS_CAPI_DLL void Solution_Set_DefaultDaily(char* Value);
    /*
    Default Yearly load shape (defaults to "Default")
    */
    DSS_CAPI_DLL void Solution_Set_DefaultYearly(char* Value);
    /*
    Array of strings containing the Event Log
    */
    DSS_CAPI_DLL void Solution_Get_EventLog(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_EventLog but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_EventLog_GR(void);
    /*
    Hour as a double, including fractional part
    */
    DSS_CAPI_DLL double Solution_Get_dblHour(void);
    /*
    Hour as a double, including fractional part
    */
    DSS_CAPI_DLL void Solution_Set_dblHour(double Value);
    /*
    Set Stepsize in Hr
    */
    DSS_CAPI_DLL void Solution_Set_StepsizeHr(double Value);
    /*
    Set Stepsize in minutes
    */
    DSS_CAPI_DLL void Solution_Set_StepsizeMin(double Value);